// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the error correctly 1`] = `
<div
  className="form-container"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      htmlFor="start-point"
    >
       Starting Location 
    </label>
    <input
      className="text-input"
      id="start-point"
      placeholder="start point"
      required={true}
      type="text"
    />
    <label
      htmlFor="end-point"
    >
       Drop-off point
    </label>
    <input
      className="text-input"
      id="end-point"
      placeholder="end point"
      required={true}
      type="text"
    />
    <p
      className="error"
    >
        
      location not accesbile
       
    </p>
    <div
      className="button-container"
    >
      <button
        className="button"
        type="submit"
      >
         
        Submit
         
      </button>
      <button
        className="button"
        type="reset"
      >
         Reset 
      </button>
    </div>
  </form>
</div>
`;

exports[`should render the form correctly with distance and time 1`] = `
<div
  className="form-container"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      htmlFor="start-point"
    >
       Starting Location 
    </label>
    <input
      className="text-input"
      id="start-point"
      placeholder="start point"
      required={true}
      type="text"
    />
    <label
      htmlFor="end-point"
    >
       Drop-off point
    </label>
    <input
      className="text-input"
      id="end-point"
      placeholder="end point"
      required={true}
      type="text"
    />
    <p>
       total distance: 
      200
       
    </p>
    <p>
       total time: 
      20
       
    </p>
    <div
      className="button-container"
    >
      <button
        className="button"
        type="submit"
      >
         
        Submit
         
      </button>
      <button
        className="button"
        type="reset"
      >
         Reset 
      </button>
    </div>
  </form>
</div>
`;
